# music-room

./: .env.example  TODO  docker-compose.yaml
backend/: Cargo.toml
backend/migrations/: 0_users.sql  1_rooms.sql  2_queue.sql  3_refresh_tokens.sql  4_reset_tokens.sql  5_email_tokens.sql  6_friends.sql  7_invitations.sql  8_tracks.sql
backend/src/: db.rs  errors.rs  lib.rs  main.rs  state.rs
backend/src/dtos/: auth.rs  friend.rs  hifi.rs  invitation.rs  mod.rs  queue.rs  rooms.rs  user.rs  ws.rs
backend/src/handlers/: auth.rs  friends.rs  hifi.rs  invitations.rs  mod.rs  queue.rs  rooms.rs  user.rs
backend/src/middleware/: auth.rs
backend/src/models/: email_token.rs  friend.rs  invitation.rs  mod.rs  queue.rs  refresh_token.rs  reset_token.rs  room.rs  user.rs
backend/src/repositories/: auth.rs  email_tokens.rs  friends.rs  invitations.rs  mod.rs  queue.rs  refresh_tokens.rs  reset_tokens.rs  rooms.rs  users.rs
backend/src/routes/: auth.rs  friends.rs  hifi.rs  invitations.rs  mod.rs  rooms.rs  user.rs
backend/src/services/: auth.rs  cleanup.rs  email.rs  friends.rs  hifi.rs  invitations.rs  mod.rs  queue.rs  rooms.rs  tokens.rs  user.rs
backend/tests/: auth.rs  friends.rs  invitations.rs  queue.rs  rooms.rs  user.rs
migrations/: 0_users.sql  1_rooms.sql
mobile/: pubspec.yaml  test_silence.dart
mobile/android/app/: build.gradle.kts
mobile/lib/: main.dart
mobile/lib/controllers/: auth_controller.dart  friends_controller.dart  room_controller.dart
mobile/lib/core/: theme.dart
mobile/lib/models/: friend.dart  mock_tracks.dart  queue_item.dart  (+5 more)
(+26 files in other folders)
