[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
dotenv = "0.15.0"
postgres = "0.19.12"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
