[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["ws"] }
chrono = "0.4.44"
dotenv = "0.15.0"
futures-util = { version = "0.3.32", features = ["sink"] }
hex = "0.4.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
lettre = { version = "0.11.19", features = ["builder"] }
postgres = "0.19.12"
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
validator = { version = "0.20.0" }

[dev-dependencies]
axum-test = "19.1.1"
tokio = { version = "1.50.0", features = ["macros"] }
